<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timer" Id="{22026e62-f2b0-4450-8730-3e0a131f9754}">
    <Declaration><![CDATA[TYPE ST_Timer:
	
STRUCT
	bStart : BOOL;
	tTime : TIME := T#10S;
	tElapsedTime : TIME;
	bQ : BOOL;
END_STRUCT

END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>